syntax = "proto3";
package pb;
option go_package = "internal/infra/grpc/pb";

message CreateOrderRequest {
  string id = 1;
  float price = 2;
  float tax = 3;
}

message CreateOrderResponse {
  string id = 1;
  float price = 2;
  float tax = 3;
  float final_price = 4;
}

message FindOrderRequest {
  string sort = 1;
  int32 page = 2;
  int32 limit = 3;
}

message OrderList {
  repeated CreateOrderResponse orders = 1;
}

service OrderService {
  rpc CreateOrder(CreateOrderRequest) returns (CreateOrderResponse){}
  rpc ListOrders(FindOrderRequest) returns (OrderList){}
}